--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="mx-auto"></div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white link-info" href="#">Beranda</a>
+            <a class="nav-link text-white link-info" href="">Beranda</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white link-info" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-white link-info" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Profile
             </a>
             <ul class="dropdown-menu dropdown-menu-dark">
@@ -53,7 +53,7 @@
             </ul>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-white link-info" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-white link-info" href="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Akademik 
             </a>
             <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-lg-end">
