--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <div class="galeri-bg">
     <!-- Title Start-->
     <div class="pt-5">
-      <div class="text-prog d-none d-md-block pt-5 pb-5">
+      <div class="text-galeri d-block d-md-block  pb-5">
         <h1 class="display-4 fw-bold text-white text-center pt-5">Galeri Sains Al-Qur'an</h1>
       </div>
     </div>
@@ -314,7 +314,7 @@
 
           <!-- Card 3 -->
           <div class="col">
-            <div class="card">
+            <div class="card ">
               <img src="img/JUARA10000000000.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">SMA SAINS AL-QUR’AN WAHID HASYIM BERPRESTASI INTERNASIONAL</h5>
